# Snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  debug.sh  imgui.ini  index.html  main.js  release.sh  reset_save_files.sh  run.sh  score.txt  settings.txt
include/: Game.hpp  Settings.hpp  UI.hpp
src/: Game.cpp  Settings.cpp  Snake.cpp  UI.cpp  main.cpp  shell_minimal.html
src/include/: Game.hpp  Settings.hpp  UI.hpp
